# study_programming

./: .gitignore  README.md
arch/cpp/: CMakeLists.txt  clean_architecture.cpp  event_driven.cpp  hexagonal.cpp  layered.cpp  pipe_filter_arch.cpp
asio/: CMakeLists.txt  README.md
asio/core/: io_context_basic.cpp  io_context_post.cpp  io_context_post_dispatch_defer.cpp  io_context_strand.cpp  io_context_thread_pool.cpp  io_context_work_guard.cpp
ddd/cpp/: CMakeLists.txt  aggregate_root.cpp  anti_corruption_layer.cpp  bounded_context.cpp  domain_service.cpp  (+2 more)
docs/: ROADMAP.md  STUDY_GAPS.md  STUDY_INVENTORY.md  STUDY_PROGRESS.md
dp/: README.md
dp/c/: CMakeLists.txt  abstract_factory.c  active_object.c  adapter.c  ambassador.c  bridge.c  builder.c  bulkhead.c  cache_aside.c  chain_of_responsibility.c  circuit_breaker.c  command.c  compensating_transaction.c  composite.c  cqrs.c  crtp.c  data_mapper.c  decorator.c  dependency_injection.c  domain_event.c  double_checked_locking.c  event_sourcing.c  facade.c  factory.c  flyweight.c  half_sync_half_async.c  health_endpoint.c  interpreter.c  iterator.c  lazy_initialization.c  leader_followers.c  mediator.c  memento.c  monitor_object.c  mvc.c  null_object.c  object_pool.c  observer.c  pimpl.c  pipes_and_filters.c  (+26 more)
dp/cpp/: CMakeLists.txt  abstract_factory.cpp  active_object.cpp  adapter.cpp  ambassador.cpp  bridge.cpp  builder.cpp  bulkhead.cpp  cache_aside.cpp  chain_of_responsibility.cpp  circuit_breaker.cpp  command.cpp  compensating_transaction.cpp  composite.cpp  cqrs.cpp  crtp.cpp  data_mapper.cpp  decorator.cpp  dependency_injection.cpp  domain_event.cpp  double_checked_locking.cpp  event_sourcing.cpp  facade.cpp  factory.cpp  factory.hpp  factory_impl.cpp  factory_improved.cpp  flyweight.cpp  half_sync_half_async.cpp  health_endpoint.cpp  interpreter.cpp  iterator.cpp  lazy_initialization.cpp  leader_followers.cpp  mediator.cpp  memento.cpp  monitor_object.cpp  mvc.cpp  null_object.cpp  object_pool.cpp  (+29 more)
dp/rust/: Cargo.toml
dp/rust/src/: abstract_factory.rs  active_object.rs  adapter.rs  ambassador.rs  bridge.rs  builder.rs  bulkhead.rs  cache_aside.rs  chain_of_responsibility.rs  circuit_breaker.rs  command.rs  compensating_transaction.rs  composite.rs  cqrs.rs  crtp.rs  data_mapper.rs  decorator.rs  dependency_injection.rs  domain_event.rs  double_checked_locking.rs  event_sourcing.rs  facade.rs  factory.rs  flyweight.rs  half_sync_half_async.rs  health_endpoint.rs  interpreter.rs  iterator.rs  lazy_initialization.rs  leader_followers.rs  mediator.rs  memento.rs  monitor_object.rs  mvc.rs  null_object.rs  object_pool.rs  observer.rs  pimpl.rs  pipes_and_filters.rs  policy_based_design.rs  (+25 more)
practice/: README.md
practice/spec/cpp/: CMakeLists.txt
practice/spec/cpp/cpp11/lambda_expressions/: README.md  step01.cpp  step02.cpp  step03.cpp  step04.cpp  step05.cpp  step06.cpp  step07.cpp  step08.cpp  step09.cpp  step10.cpp
spec/cpp/: CMakeLists.txt
spec/cpp/cpp11/: alignas_alignof.cpp  array.cpp  atomic.cpp  attribute_noreturn.cpp  bind.cpp  chrono.cpp  condition_variable.cpp  constexpr.cpp  default_delete.cpp  delegating_inheriting_ctors.cpp  enum_class.cpp  event_loop_baseline.cpp  explicit_conversion_op.cpp  extended_friend.cpp  futures.cpp  initializer_list.cpp  lambda_expressions.cpp  move_semantics.cpp  mutex_locks.cpp  namespace_alias.cpp  noexcept.cpp  nullptr.cpp  override_final.cpp  perfect_forwarding.cpp  random.cpp  range_based_for.cpp  ratio.cpp  raw_string_literals.cpp  regex.cpp  smart_pointers.cpp  trailing_return_type.cpp  type_traits.cpp  unicode_literals.cpp  uniform_initialization.cpp  unordered_containers.cpp  user_defined_literals.cpp
spec/cpp/cpp14/: binary_literals.cpp  decltype_auto.cpp  digit_separators.cpp  exchange.cpp  generic_lambda_bind_alternative.cpp  generic_lambdas.cpp  integer_sequence.cpp  make_unique.cpp  quoted.cpp  relaxed_constexpr.cpp  shared_timed_mutex.cpp  tuple_get_by_type.cpp  variable_templates.cpp
spec/cpp/cpp17/: aggregate_init.cpp  aligned_alloc.cpp  as_const.cpp  byte.cpp  charconv.cpp  clamp_sample.cpp  class_template_argument_deduction.cpp  conjunction_disjunction.cpp  constexpr_lambda.cpp  deduction_guides.cpp  filesystem.cpp  fold_expressions.cpp  gcd_lcm.cpp  has_include.cpp  if_init_statement.cpp  launder.cpp  make_from_tuple.cpp  memory_resource.cpp  nested_namespaces.cpp  nodiscard.cpp  not_fn.cpp  overaligned_alloc.cpp  parallel_algorithms.cpp  piecewise_construct.cpp  scoped_lock.cpp  searcher.cpp  selection_with_init.cpp  static_assert_no_msg.cpp  string_view.cpp  template_auto.cpp  try_emplace.cpp  typename_template.cpp  void_t.cpp
spec/cpp/cpp20/: aggregate_designated_array.cpp  aggregate_init_parens.cpp  atomic_ref.cpp  barrier.cpp  bind_front.cpp  char8_t.cpp  chrono_calendar.cpp  concepts_requires.cpp  concepts_standard_library.cpp  consteval.cpp  consteval_propagation.cpp  constinit.cpp  coroutine_generator.cpp  designated_initializers.cpp  feature_test_macros.cpp  format_advanced.cpp  hello.cppm  lambda_pack_capture.cpp  modules_main.cpp  ranges.cpp  ranges_factories.cpp  ranges_pipeline.cpp  span.cpp  stop_token.cpp  string_starts_ends_with.cpp  sync_primitives.cpp  template_lambda.cpp  three_way_comparison.cpp  using_enum.cpp
spec/cpp/cpp23/: assume_attribute.cpp  auto_decay_copy.cpp  bind_back.cpp  consteval_if_propagation.cpp  constexpr_unique_ptr.cpp  deducing_this.cpp  expected.cpp  expected_constructors.cpp  expected_monadic.cpp  extended_floating_point.cpp  flat_map_set.cpp  generator.cpp  mdspan.cpp  monadic_optional.cpp  move_only_function.cpp  multidimensional_subscript.cpp  out_ptr.cpp  print_println.cpp  ranges_adjacent.cpp  ranges_cartesian.cpp  ranges_chunk.cpp  ranges_enumerate.cpp  ranges_join_with.cpp  ranges_repeat.cpp  ranges_slide.cpp  ranges_to.cpp  ranges_zip.cpp  size_t_literal.cpp  stacktrace.cpp  static_call_operator.cpp  string_contains.cpp  to_underlying.cpp
spec/cpp/cpp98/: README.md  auto_ptr.cpp  bind1st_bind2nd.cpp  for_each.cpp  functor.cpp  iterator_categories.cpp  mem_fun.cpp  template_specialization.cpp
(+126 files in other folders)
