[package]
name = "design-patterns-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "singleton"
path = "src/singleton.rs"

[[bin]]
name = "factory"
path = "src/factory.rs"

[[bin]]
name = "abstract_factory"
path = "src/abstract_factory.rs"

[[bin]]
name = "builder"
path = "src/builder.rs"

[[bin]]
name = "prototype"
path = "src/prototype.rs"

[[bin]]
name = "adapter"
path = "src/adapter.rs"

[[bin]]
name = "bridge"
path = "src/bridge.rs"

[[bin]]
name = "composite"
path = "src/composite.rs"

[[bin]]
name = "decorator"
path = "src/decorator.rs"

[[bin]]
name = "facade"
path = "src/facade.rs"

[[bin]]
name = "flyweight"
path = "src/flyweight.rs"

[[bin]]
name = "proxy"
path = "src/proxy.rs"

[[bin]]
name = "observer"
path = "src/observer.rs"

[[bin]]
name = "strategy"
path = "src/strategy.rs"

[[bin]]
name = "command"
path = "src/command.rs"

[[bin]]
name = "state"
path = "src/state.rs"

[[bin]]
name = "template_method"
path = "src/template_method.rs"

[[bin]]
name = "visitor"
path = "src/visitor.rs"

[[bin]]
name = "chain_of_responsibility"
path = "src/chain_of_responsibility.rs"

[[bin]]
name = "mediator"
path = "src/mediator.rs"

[[bin]]
name = "memento"
path = "src/memento.rs"

[[bin]]
name = "iterator"
path = "src/iterator.rs"

[[bin]]
name = "interpreter"
path = "src/interpreter.rs"

[[bin]]
name = "mvc"
path = "src/mvc.rs"

[[bin]]
name = "dependency_injection"
path = "src/dependency_injection.rs"

[[bin]]
name = "null_object"
path = "src/null_object.rs"


[[bin]]
name = "repository"
path = "src/repository.rs"

[[bin]]
name = "object_pool"
path = "src/object_pool.rs"

[[bin]]
name = "circuit_breaker"
path = "src/circuit_breaker.rs"


